# rustbelt

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
src/commands/: example_command.rs  mod.rs
src/commands/base/: mod.rs  registry.rs
src/commands/groups/: misc.rs  mod.rs
src/commands/windows/: amsiproviders.rs  antivirus.rs  lastshutdown.rs  mod.rs  osinfo.rs
src/runtime/: mod.rs
src/runtime/formatter/: mod.rs  simple_formatter.rs
src/runtime/writer/: console_writer.rs  mod.rs
src/utils/: mod.rs  registry.rs  wmi.rs
