[package]
name = "rustbelt"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.40"
clap = { version = "4.5.30", features = ["derive"] }
inventory = "0.3.19"
strum = "0.27.1"
strum_macros = "0.27.1"
windows-registry = "0.5.0"

[dependencies.windows]
version="0.59.0"
features = [
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Rpc",
    "Win32_System_Variant",
    "Win32_System_Wmi",
]
